@@ -3,6 +3,7 @@
 - ErmaC : Rename CPU_MODEL_xxx into CPUID_MODEL_xxx follow Apple source name
 - ErmaC : Rename decompress_lzvn function to lzvn_decode follow Apple source name.
 - ErmaC : Split out states generator from acpi_patcher (Credits to Clover Teams)
+- ErmaC : Merged proposed patch by N3 (Boot from vanilla Recovery HD, Installation DMG)
 - bitshoveler : Fix "sed: RE error: illegal byte sequence", which turns out to be from feeding sed a TIFF file (buildpkg.sh)
 - bitshoveler : CacheInit(), CacheRead() prototypes: use u_int32_t instead of long where appropriate (saio_internal.h)
 - bitshoveler : Improved defensiveness against malloc failure (disk.c)
